bump minimum gradle version to 8.14.4