@@ -7,8 +7,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.slf4j:slf4j-api:2.0.9'
-    implementation 'ch.qos.logback:logback-classic:1.4.11'
+    implementation 'org.slf4j:slf4j-api:2.0.17'
+    implementation 'ch.qos.logback:logback-classic:1.5.15'
     implementation 'bouncycastle:bcprov-jdk16:140'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
 }
@@ -18,10 +18,9 @@ application {
     mainClass = "org.example.modular.Hello"
 }
 
-
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(24)
+        languageVersion = JavaLanguageVersion.of(25)
     }
 }
 
@@ -36,9 +35,6 @@ compileJava {
     options.compilerArgs = ['--module-path', classpath.asPath]
     classpath = files()
 }
-
-tasks.withType(JavaCompile).each { it.options.compilerArgs.add('--enable-preview') }
-tasks.withType(JavaExec).each { it.jvmArgs.add('--enable-preview') }
 
 jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
